<package format="2">
  <name>nuhal_all</name>
  <version>0.1.0</version>
  <description>
    Northwestern Utilities and Hardware Abstraction Layer: cross-platform code.
    The components of the nuhal C library that work across all platforms
  </description>
  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>
  <license>MIT</license>
  <url type="repository">https://www.github.com/omnid/nuhal</url>
  <url>https://www.github.com/omnid/nuhal/nuhal_all</url>
  <author email="elwin@u.northwestern.edu">Matthew Elwin</author>
  <build_depend>cmakeme</build_depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend>texlive-full</doc_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
