<package format="2">
  <name>nuhal_linux</name>
  <version>0.1.0</version>
  <description>
    Northwestern Utilities and Hardware Abstraction Layer: Linux-specific code.
    The components of the nuhal C library that implement Linux-specific functionality.
  </description>
  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>
  <license>MIT</license>
  <url type="repository">https://www.github.com/omnid/nuhal</url>
  <url>https://www.github.com/omnid/nuhal/nuhal_linux</url>
  <author email="elwin@u.northwestern.edu">Matthew Elwin</author>
  <depend>nuhal_all</depend>
  <build_depend>cmakeme</build_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
